--- a/result/2022-01-16.md
+++ b/result/2022-01-16.md
@@ -4,11 +4,11 @@
 4. [1月15日新增确诊119例](https://s.weibo.com//weibo?q=%231%E6%9C%8815%E6%97%A5%E6%96%B0%E5%A2%9E%E7%A1%AE%E8%AF%8A119%E4%BE%8B%23&Refer=top) 1877210
 5. [张文宏说这可能是新冠大流行最后一个寒冬](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E6%96%87%E5%AE%8F%E8%AF%B4%E8%BF%99%E5%8F%AF%E8%83%BD%E6%98%AF%E6%96%B0%E5%86%A0%E5%A4%A7%E6%B5%81%E8%A1%8C%E6%9C%80%E5%90%8E%E4%B8%80%E4%B8%AA%E5%AF%92%E5%86%AC%23&Refer=top) 1869159
 6. [让正史成为全党全社会的共识](https://s.weibo.com//weibo?q=%23%E8%AE%A9%E6%AD%A3%E5%8F%B2%E6%88%90%E4%B8%BA%E5%85%A8%E5%85%9A%E5%85%A8%E7%A4%BE%E4%BC%9A%E7%9A%84%E5%85%B1%E8%AF%86%23&Refer=top) 1847557
-7. [汤加](https://s.weibo.com//weibo?q=%E6%B1%A4%E5%8A%A0&Refer=top) 1587944
-8. [如果疫情遇上了七级火山喷发](https://s.weibo.com//weibo?q=%E5%A6%82%E6%9E%9C%E7%96%AB%E6%83%85%E9%81%87%E4%B8%8A%E4%BA%86%E4%B8%83%E7%BA%A7%E7%81%AB%E5%B1%B1%E5%96%B7%E5%8F%91&Refer=top) 1404446
+7. [如果疫情遇上了七级火山喷发](https://s.weibo.com//weibo?q=%E5%A6%82%E6%9E%9C%E7%96%AB%E6%83%85%E9%81%87%E4%B8%8A%E4%BA%86%E4%B8%83%E7%BA%A7%E7%81%AB%E5%B1%B1%E5%96%B7%E5%8F%91&Refer=top) 1811396
+8. [汤加](https://s.weibo.com//weibo?q=%E6%B1%A4%E5%8A%A0&Refer=top) 1587944
 9. [北京确诊近14天无外省市旅居史](https://s.weibo.com//weibo?q=%23%E5%8C%97%E4%BA%AC%E7%A1%AE%E8%AF%8A%E8%BF%9114%E5%A4%A9%E6%97%A0%E5%A4%96%E7%9C%81%E5%B8%82%E6%97%85%E5%B1%85%E5%8F%B2%23&Refer=top) 1400025
-10. [北京疫情](https://s.weibo.com//weibo?q=%23%E5%8C%97%E4%BA%AC%E7%96%AB%E6%83%85%23&Refer=top) 1340992
-11. [汤加火山爆发引发海啸扑向日本](https://s.weibo.com//weibo?q=%23%E6%B1%A4%E5%8A%A0%E7%81%AB%E5%B1%B1%E7%88%86%E5%8F%91%E5%BC%95%E5%8F%91%E6%B5%B7%E5%95%B8%E6%89%91%E5%90%91%E6%97%A5%E6%9C%AC%23&Refer=top) 1333283
+10. [汤加火山爆发引发海啸扑向日本](https://s.weibo.com//weibo?q=%23%E6%B1%A4%E5%8A%A0%E7%81%AB%E5%B1%B1%E7%88%86%E5%8F%91%E5%BC%95%E5%8F%91%E6%B5%B7%E5%95%B8%E6%89%91%E5%90%91%E6%97%A5%E6%9C%AC%23&Refer=top) 1380598
+11. [北京疫情](https://s.weibo.com//weibo?q=%23%E5%8C%97%E4%BA%AC%E7%96%AB%E6%83%85%23&Refer=top) 1340992
 12. [于敏曾被日本人故意开车追撞](https://s.weibo.com//weibo?q=%23%E4%BA%8E%E6%95%8F%E6%9B%BE%E8%A2%AB%E6%97%A5%E6%9C%AC%E4%BA%BA%E6%95%85%E6%84%8F%E5%BC%80%E8%BD%A6%E8%BF%BD%E6%92%9E%23&Refer=top) 1281932
 13. [儿子把母亲忘在服务区开出40公里仍不知](https://s.weibo.com//weibo?q=%23%E5%84%BF%E5%AD%90%E6%8A%8A%E6%AF%8D%E4%BA%B2%E5%BF%98%E5%9C%A8%E6%9C%8D%E5%8A%A1%E5%8C%BA%E5%BC%80%E5%87%BA40%E5%85%AC%E9%87%8C%E4%BB%8D%E4%B8%8D%E7%9F%A5%23&Refer=top) 1164840
 14. [深圳房租价格跌回4年前](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E6%88%BF%E7%A7%9F%E4%BB%B7%E6%A0%BC%E8%B7%8C%E5%9B%9E4%E5%B9%B4%E5%89%8D%23&Refer=top) 1104528
@@ -54,7 +54,7 @@
 54. [英雄联盟](https://s.weibo.com//weibo?q=%E8%8B%B1%E9%9B%84%E8%81%94%E7%9B%9F&Refer=top) 343566
 55. [深圳1月15日暂无新增病例](https://s.weibo.com//weibo?q=%E6%B7%B1%E5%9C%B31%E6%9C%8815%E6%97%A5%E6%9A%82%E6%97%A0%E6%96%B0%E5%A2%9E%E7%97%85%E4%BE%8B&Refer=top) 335884
 56. [西安发布会](https://s.weibo.com//weibo?q=%E8%A5%BF%E5%AE%89%E5%8F%91%E5%B8%83%E4%BC%9A&Refer=top) 332920
-57. [泰国猪肉价格上涨鳄鱼肉成平替](https://s.weibo.com//weibo?q=%23%E6%B3%B0%E5%9B%BD%E7%8C%AA%E8%82%89%E4%BB%B7%E6%A0%BC%E4%B8%8A%E6%B6%A8%E9%B3%84%E9%B1%BC%E8%82%89%E6%88%90%E5%B9%B3%E6%9B%BF%23&Refer=top) 318078
+57. [泰国猪肉价格上涨鳄鱼肉成平替](https://s.weibo.com//weibo?q=%23%E6%B3%B0%E5%9B%BD%E7%8C%AA%E8%82%89%E4%BB%B7%E6%A0%BC%E4%B8%8A%E6%B6%A8%E9%B3%84%E9%B1%BC%E8%82%89%E6%88%90%E5%B9%B3%E6%9B%BF%23&Refer=top) 327698
 58. [奥密克戎正迅速取代其它变异株](https://s.weibo.com//weibo?q=%23%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%E6%AD%A3%E8%BF%85%E9%80%9F%E5%8F%96%E4%BB%A3%E5%85%B6%E5%AE%83%E5%8F%98%E5%BC%82%E6%A0%AA%23&Refer=top) 305638
 59. [妈妈辅导孩子写作业气到脑梗](https://s.weibo.com//weibo?q=%23%E5%A6%88%E5%A6%88%E8%BE%85%E5%AF%BC%E5%AD%A9%E5%AD%90%E5%86%99%E4%BD%9C%E4%B8%9A%E6%B0%94%E5%88%B0%E8%84%91%E6%A2%97%23&Refer=top) 302188
 60. [假如情侣吵架能代吵](https://s.weibo.com//weibo?q=%23%E5%81%87%E5%A6%82%E6%83%85%E4%BE%A3%E5%90%B5%E6%9E%B6%E8%83%BD%E4%BB%A3%E5%90%B5%23&Refer=top) 288641
@@ -75,13 +75,13 @@
 75. [王立科送给孙力军9000多万小海鲜](https://s.weibo.com//weibo?q=%23%E7%8E%8B%E7%AB%8B%E7%A7%91%E9%80%81%E7%BB%99%E5%AD%99%E5%8A%9B%E5%86%9B9000%E5%A4%9A%E4%B8%87%E5%B0%8F%E6%B5%B7%E9%B2%9C%23&Refer=top) 217820
 76. [踩着门禁点回家的小猫咪](https://s.weibo.com//weibo?q=%23%E8%B8%A9%E7%9D%80%E9%97%A8%E7%A6%81%E7%82%B9%E5%9B%9E%E5%AE%B6%E7%9A%84%E5%B0%8F%E7%8C%AB%E5%92%AA%23&Refer=top) 214587
 77. [外国人如何过中国春节](https://s.weibo.com//weibo?q=%23%E5%A4%96%E5%9B%BD%E4%BA%BA%E5%A6%82%E4%BD%95%E8%BF%87%E4%B8%AD%E5%9B%BD%E6%98%A5%E8%8A%82%23&Refer=top) 205993
-78. [志愿军特等功臣王学风有了正面军装照](https://s.weibo.com//weibo?q=%23%E5%BF%97%E6%84%BF%E5%86%9B%E7%89%B9%E7%AD%89%E5%8A%9F%E8%87%A3%E7%8E%8B%E5%AD%A6%E9%A3%8E%E6%9C%89%E4%BA%86%E6%AD%A3%E9%9D%A2%E5%86%9B%E8%A3%85%E7%85%A7%23&Refer=top) 205259
-79. [妈妈外出1小时爸爸哄娃崩溃大哭](https://s.weibo.com//weibo?q=%23%E5%A6%88%E5%A6%88%E5%A4%96%E5%87%BA1%E5%B0%8F%E6%97%B6%E7%88%B8%E7%88%B8%E5%93%84%E5%A8%83%E5%B4%A9%E6%BA%83%E5%A4%A7%E5%93%AD%23&Refer=top) 204590
-80. [天津迎战奥密克戎](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E8%BF%8E%E6%88%98%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%23&Refer=top) 204514
-81. [广州市第十二人民医院停诊](https://s.weibo.com//weibo?q=%23%E5%B9%BF%E5%B7%9E%E5%B8%82%E7%AC%AC%E5%8D%81%E4%BA%8C%E4%BA%BA%E6%B0%91%E5%8C%BB%E9%99%A2%E5%81%9C%E8%AF%8A%23&Refer=top) 203021
-82. [日本5年来首发海啸预警](https://s.weibo.com//weibo?q=%23%E6%97%A5%E6%9C%AC5%E5%B9%B4%E6%9D%A5%E9%A6%96%E5%8F%91%E6%B5%B7%E5%95%B8%E9%A2%84%E8%AD%A6%23&Refer=top) 197727
-83. [贵州4岁女孩疑被后妈殴打烫伤](https://s.weibo.com//weibo?q=%23%E8%B4%B5%E5%B7%9E4%E5%B2%81%E5%A5%B3%E5%AD%A9%E7%96%91%E8%A2%AB%E5%90%8E%E5%A6%88%E6%AE%B4%E6%89%93%E7%83%AB%E4%BC%A4%23&Refer=top) 196453
-84. [英雄不一定脚踩祥云也可能脚踩小船](https://s.weibo.com//weibo?q=%23%E8%8B%B1%E9%9B%84%E4%B8%8D%E4%B8%80%E5%AE%9A%E8%84%9A%E8%B8%A9%E7%A5%A5%E4%BA%91%E4%B9%9F%E5%8F%AF%E8%83%BD%E8%84%9A%E8%B8%A9%E5%B0%8F%E8%88%B9%23&Refer=top) 193287
+78. [英雄不一定脚踩祥云也可能脚踩小船](https://s.weibo.com//weibo?q=%23%E8%8B%B1%E9%9B%84%E4%B8%8D%E4%B8%80%E5%AE%9A%E8%84%9A%E8%B8%A9%E7%A5%A5%E4%BA%91%E4%B9%9F%E5%8F%AF%E8%83%BD%E8%84%9A%E8%B8%A9%E5%B0%8F%E8%88%B9%23&Refer=top) 205867
+79. [志愿军特等功臣王学风有了正面军装照](https://s.weibo.com//weibo?q=%23%E5%BF%97%E6%84%BF%E5%86%9B%E7%89%B9%E7%AD%89%E5%8A%9F%E8%87%A3%E7%8E%8B%E5%AD%A6%E9%A3%8E%E6%9C%89%E4%BA%86%E6%AD%A3%E9%9D%A2%E5%86%9B%E8%A3%85%E7%85%A7%23&Refer=top) 205259
+80. [妈妈外出1小时爸爸哄娃崩溃大哭](https://s.weibo.com//weibo?q=%23%E5%A6%88%E5%A6%88%E5%A4%96%E5%87%BA1%E5%B0%8F%E6%97%B6%E7%88%B8%E7%88%B8%E5%93%84%E5%A8%83%E5%B4%A9%E6%BA%83%E5%A4%A7%E5%93%AD%23&Refer=top) 204590
+81. [天津迎战奥密克戎](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E8%BF%8E%E6%88%98%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%23&Refer=top) 204514
+82. [广州市第十二人民医院停诊](https://s.weibo.com//weibo?q=%23%E5%B9%BF%E5%B7%9E%E5%B8%82%E7%AC%AC%E5%8D%81%E4%BA%8C%E4%BA%BA%E6%B0%91%E5%8C%BB%E9%99%A2%E5%81%9C%E8%AF%8A%23&Refer=top) 203021
+83. [日本5年来首发海啸预警](https://s.weibo.com//weibo?q=%23%E6%97%A5%E6%9C%AC5%E5%B9%B4%E6%9D%A5%E9%A6%96%E5%8F%91%E6%B5%B7%E5%95%B8%E9%A2%84%E8%AD%A6%23&Refer=top) 197727
+84. [贵州4岁女孩疑被后妈殴打烫伤](https://s.weibo.com//weibo?q=%23%E8%B4%B5%E5%B7%9E4%E5%B2%81%E5%A5%B3%E5%AD%A9%E7%96%91%E8%A2%AB%E5%90%8E%E5%A6%88%E6%AE%B4%E6%89%93%E7%83%AB%E4%BC%A4%23&Refer=top) 196453
 85. [云南野象谷拍到新生小象洗澡](https://s.weibo.com//weibo?q=%23%E4%BA%91%E5%8D%97%E9%87%8E%E8%B1%A1%E8%B0%B7%E6%8B%8D%E5%88%B0%E6%96%B0%E7%94%9F%E5%B0%8F%E8%B1%A1%E6%B4%97%E6%BE%A1%23&Refer=top) 191805
 86. [公交司机停车救火后向乘客鞠躬致歉](https://s.weibo.com//weibo?q=%23%E5%85%AC%E4%BA%A4%E5%8F%B8%E6%9C%BA%E5%81%9C%E8%BD%A6%E6%95%91%E7%81%AB%E5%90%8E%E5%90%91%E4%B9%98%E5%AE%A2%E9%9E%A0%E8%BA%AC%E8%87%B4%E6%AD%89%23&Refer=top) 187975
 87. [12306可查防疫新政](https://s.weibo.com//weibo?q=%2312306%E5%8F%AF%E6%9F%A5%E9%98%B2%E7%96%AB%E6%96%B0%E6%94%BF%23&Refer=top) 177997
@@ -94,10 +94,11 @@
 94. [驻大阪总领馆提醒中国公民防范海啸灾害](https://s.weibo.com//weibo?q=%23%E9%A9%BB%E5%A4%A7%E9%98%AA%E6%80%BB%E9%A2%86%E9%A6%86%E6%8F%90%E9%86%92%E4%B8%AD%E5%9B%BD%E5%85%AC%E6%B0%91%E9%98%B2%E8%8C%83%E6%B5%B7%E5%95%B8%E7%81%BE%E5%AE%B3%23&Refer=top) 150897
 95. [北京人算是把碳水吃明白了](https://s.weibo.com//weibo?q=%23%E5%8C%97%E4%BA%AC%E4%BA%BA%E7%AE%97%E6%98%AF%E6%8A%8A%E7%A2%B3%E6%B0%B4%E5%90%83%E6%98%8E%E7%99%BD%E4%BA%86%23&Refer=top) 144838
 96. [鹈鹕vs篮网](https://s.weibo.com//weibo?q=%23%E9%B9%88%E9%B9%95vs%E7%AF%AE%E7%BD%91%23&Refer=top) 144810
-97. [get正确的跑步姿势](https://s.weibo.com//weibo?q=%23get%E6%AD%A3%E7%A1%AE%E7%9A%84%E8%B7%91%E6%AD%A5%E5%A7%BF%E5%8A%BF%23&Refer=top) 136772
-98. [神十三出征满三个月了](https://s.weibo.com//weibo?q=%23%E7%A5%9E%E5%8D%81%E4%B8%89%E5%87%BA%E5%BE%81%E6%BB%A1%E4%B8%89%E4%B8%AA%E6%9C%88%E4%BA%86%23&Refer=top) 124961
-99. [LNG战胜RA](https://s.weibo.com//weibo?q=%23LNG%E6%88%98%E8%83%9CRA%23&Refer=top) 124035
-100. [TTG](https://s.weibo.com//weibo?q=TTG&Refer=top) 123912
-101. [TTG一年三亚](https://s.weibo.com//weibo?q=%23TTG%E4%B8%80%E5%B9%B4%E4%B8%89%E4%BA%9A%23&Refer=top) 123589
-102. [新年向上的人生建议](https://s.weibo.com//weibo?q=%23%E6%96%B0%E5%B9%B4%E5%90%91%E4%B8%8A%E7%9A%84%E4%BA%BA%E7%94%9F%E5%BB%BA%E8%AE%AE%23&Refer=top) 106690
-103. [曼联2比2维拉](https://s.weibo.com//weibo?q=%23%E6%9B%BC%E8%81%942%E6%AF%942%E7%BB%B4%E6%8B%89%23&Refer=top) 66701
+97. [26岁乡村教师患白血病网友接力祝福](https://s.weibo.com//weibo?q=%2326%E5%B2%81%E4%B9%A1%E6%9D%91%E6%95%99%E5%B8%88%E6%82%A3%E7%99%BD%E8%A1%80%E7%97%85%E7%BD%91%E5%8F%8B%E6%8E%A5%E5%8A%9B%E7%A5%9D%E7%A6%8F%23&Refer=top) 143047
+98. [get正确的跑步姿势](https://s.weibo.com//weibo?q=%23get%E6%AD%A3%E7%A1%AE%E7%9A%84%E8%B7%91%E6%AD%A5%E5%A7%BF%E5%8A%BF%23&Refer=top) 136772
+99. [神十三出征满三个月了](https://s.weibo.com//weibo?q=%23%E7%A5%9E%E5%8D%81%E4%B8%89%E5%87%BA%E5%BE%81%E6%BB%A1%E4%B8%89%E4%B8%AA%E6%9C%88%E4%BA%86%23&Refer=top) 124961
+100. [LNG战胜RA](https://s.weibo.com//weibo?q=%23LNG%E6%88%98%E8%83%9CRA%23&Refer=top) 124035
+101. [TTG](https://s.weibo.com//weibo?q=TTG&Refer=top) 123912
+102. [TTG一年三亚](https://s.weibo.com//weibo?q=%23TTG%E4%B8%80%E5%B9%B4%E4%B8%89%E4%BA%9A%23&Refer=top) 123589
+103. [新年向上的人生建议](https://s.weibo.com//weibo?q=%23%E6%96%B0%E5%B9%B4%E5%90%91%E4%B8%8A%E7%9A%84%E4%BA%BA%E7%94%9F%E5%BB%BA%E8%AE%AE%23&Refer=top) 106690
+104. [曼联2比2维拉](https://s.weibo.com//weibo?q=%23%E6%9B%BC%E8%81%942%E6%AF%942%E7%BB%B4%E6%8B%89%23&Refer=top) 66701
